[gd_scene format=3 uid="uid://bqtppgakp5jbj"]

[ext_resource type="Script" uid="uid://btmhw51s38t1u" path="res://scripts/orbit_camera.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://dgeb5lrfsme5v" path="res://scripts/rotating_stage.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://b3j7huaktfvkn" path="res://scripts/light_pillars_layout.gd" id="4_tefeu"]
[ext_resource type="PackedScene" uid="uid://bgny7xlxsbxxx" path="res://scenes/light_pillar.tscn" id="5_o6xl0"]
[ext_resource type="AudioStream" uid="uid://bcq8fwxdxv31y" path="res://assets/music/sleep-talking.ogg" id="6_o6xl0"]
[ext_resource type="Script" uid="uid://b8u54pm62tda4" path="res://scripts/audio_visualizer.gd" id="6_tipki"]
[ext_resource type="Script" path="res://scripts/car_manager.gd" id="7_31jq3"]
[ext_resource type="Script" path="res://scripts/music_player.gd" id="8_o3c81"]
[ext_resource type="Script" path="res://scripts/main.gd" id="9_t14w1"]
[ext_resource type="PackedScene" path="res://scenes/cars/1962_ferrari_250_gto.tscn" id="10_f250g"]
[ext_resource type="PackedScene" path="res://scenes/cars/1985_toyota_sprinter_trueno_ae86.tscn" id="11_ae86x"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sgp6g"]

[sub_resource type="Sky" id="Sky_o5qli"]
sky_material = SubResource("ProceduralSkyMaterial_sgp6g")

[sub_resource type="Environment" id="Environment_0wfyh"]
background_mode = 1
background_color = Color(0.043137256, 0.05882353, 0.09411765, 1)
background_energy_multiplier = 0.45
sky = SubResource("Sky_o5qli")
ambient_light_source = 2
ambient_light_color = Color(0.16470589, 0.19607843, 0.25882354, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_sugp2"]
top_radius = 2.2
bottom_radius = 2.5
height = 0.15

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jyhfs"]
height = 0.15
radius = 2.2

[node name="Main" type="Node3D" unique_id=865511161]
script = ExtResource("9_t14w1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=501142533]
environment = SubResource("Environment_0wfyh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=707622321]
light_color = Color(1, 0.94509804, 0.8392157, 1)
light_energy = 1.1
shadow_enabled = true

[node name="OrbitCamera" type="Camera3D" parent="." unique_id=791855750 node_paths=PackedStringArray("target")]
current = true
script = ExtResource("1_0wfyh")
target = NodePath("../Stage")
distance = 5.0

[node name="Stage" type="Node3D" parent="." unique_id=790330411]
script = ExtResource("2_sugp2")

[node name="CarMount" type="Node3D" parent="Stage" unique_id=1209937718]

[node name="Platform" type="MeshInstance3D" parent="Stage" unique_id=1911327015]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.08393791, 0)
mesh = SubResource("CylinderMesh_sugp2")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/Platform" unique_id=1767355441]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/Platform/StaticBody3D" unique_id=1282772031]
shape = SubResource("CylinderShape3D_jyhfs")

[node name="LightPillars" type="Node3D" parent="." unique_id=1915213956]
script = ExtResource("4_tefeu")
pillar_scene = ExtResource("5_o6xl0")

[node name="LightPillar1" parent="LightPillars" unique_id=584079878 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="LightPillar2" parent="LightPillars" unique_id=184313158 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12, 0, 2.12)

[node name="LightPillar3" parent="LightPillars" unique_id=1586644158 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="LightPillar4" parent="LightPillars" unique_id=1292326224 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12, 0, -2.12)

[node name="LightPillar5" parent="LightPillars" unique_id=1705183621 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="LightPillar6" parent="LightPillars" unique_id=137722648 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.12, 0, -2.12)

[node name="LightPillar7" parent="LightPillars" unique_id=1491128925 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="LightPillar8" parent="LightPillars" unique_id=939562452 instance=ExtResource("5_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.12, 0, 2.12)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1862575285]
stream = ExtResource("6_o6xl0")

[node name="CarManager" type="Node" parent="." unique_id=1903192842]
script = ExtResource("7_31jq3")
car_scenes = [ExtResource("10_f250g"), ExtResource("11_ae86x")]
car_names = Array[String](["1962 Ferrari 250 GTO", "1985 Toyota Sprinter Trueno AE86"])

[node name="MusicPlayer" type="Node" parent="." unique_id=196202761 node_paths=PackedStringArray("audio_player")]
script = ExtResource("8_o3c81")
audio_player = NodePath("../AudioStreamPlayer")
music_list = [ExtResource("6_o6xl0")]
music_names = Array[String](["Sleep Talking"])

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1563659224]

[node name="MainUI" type="Control" parent="CanvasLayer" unique_id=2054373399]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/MainUI" unique_id=1752097109]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 660.0
offset_bottom = 68.0
theme_override_constants/separation = 12

[node name="PlayPauseButton" type="Button" parent="CanvasLayer/MainUI/TopBar" unique_id=759480709]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
text = "Play"

[node name="MusicSelector" type="OptionButton" parent="CanvasLayer/MainUI/TopBar" unique_id=1038104861]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2

[node name="CarSelector" type="OptionButton" parent="CanvasLayer/MainUI/TopBar" unique_id=1307564621]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2

[node name="AudioVisualizer" type="Node" parent="." unique_id=261673062 node_paths=PackedStringArray("light_pillars")]
script = ExtResource("6_tipki")
light_pillars = [NodePath("../LightPillars/LightPillar1"), NodePath("../LightPillars/LightPillar2"), NodePath("../LightPillars/LightPillar3"), NodePath("../LightPillars/LightPillar4"), NodePath("../LightPillars/LightPillar5"), NodePath("../LightPillars/LightPillar6"), NodePath("../LightPillars/LightPillar7"), NodePath("../LightPillars/LightPillar8")]
